# thebaeoom-backend

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
board/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_alter_board_options_alter_board_content_and_more.py  0003_partnershiprequest.py  0004_alter_partnershiprequest_file.py  0005_alter_partnershiprequest_status.py  0006_alter_partnershiprequest_options_and_more.py  0007_errorrequest_status.py  0008_alter_errorrequest_book_alter_errorrequest_title.py  0009_alter_board_type.py  0010_alter_board_file.py  0011_alter_board_type.py  0012_banner.py
book/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_alter_author_options_alter_book_options_and_more.py  0003_alter_author_description_alter_book_description.py  0004_alter_book_table_of_contents.py  0005_alter_book_isbn.py  0006_alter_book_pubdate.py
thebaeoom_backend/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
